[package]
name = "gomqlet"
version = "0.1.0"
edition = "2021"

[dependencies]
termios = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
term_size = "0.3.2"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"